--- a/LD49.vcxproj
+++ b/LD49.vcxproj
@@ -146,10 +146,12 @@
     </Link>
   </ItemDefinitionGroup>
   <ItemGroup>
+    <ClCompile Include="enemy.cpp" />
     <ClCompile Include="game.cpp" />
     <ClCompile Include="game_object.cpp" />
     <ClCompile Include="glad.c" />
     <ClCompile Include="particle_emitter.cpp" />
+    <ClCompile Include="player.cpp" />
     <ClCompile Include="post_processor.cpp" />
     <ClCompile Include="resource_manager.cpp" />
     <ClCompile Include="shader.cpp" />
@@ -160,9 +162,11 @@
     <ClCompile Include="texture.cpp" />
   </ItemGroup>
   <ItemGroup>
+    <ClInclude Include="enemy.h" />
     <ClInclude Include="game.h" />
     <ClInclude Include="game_object.h" />
     <ClInclude Include="particle_emitter.h" />
+    <ClInclude Include="player.h" />
     <ClInclude Include="post_processor.h" />
     <ClInclude Include="resource_manager.h" />
     <ClInclude Include="shader.h" />
@@ -188,8 +192,7 @@
     <Font Include="OCRAEXT.TTF" />
   </ItemGroup>
   <ItemGroup>
-    <Image Include="res\gameArea.png" />
-    <Image Include="res\player.png" />
+    <Image Include="res\map.png" />
     <Image Include="res\sprites.png" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
