--- a/LD49.vcxproj.filters
+++ b/LD49.vcxproj.filters
@@ -55,6 +55,12 @@
     <ClCompile Include="text_renderer.cpp">
       <Filter>Code</Filter>
     </ClCompile>
+    <ClCompile Include="player.cpp">
+      <Filter>Code</Filter>
+    </ClCompile>
+    <ClCompile Include="enemy.cpp">
+      <Filter>Code</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="resource_manager.h">
@@ -85,6 +91,12 @@
       <Filter>Headers</Filter>
     </ClInclude>
     <ClInclude Include="text_renderer.h">
+      <Filter>Headers</Filter>
+    </ClInclude>
+    <ClInclude Include="player.h">
+      <Filter>Headers</Filter>
+    </ClInclude>
+    <ClInclude Include="enemy.h">
       <Filter>Headers</Filter>
     </ClInclude>
   </ItemGroup>
@@ -127,13 +139,10 @@
     </Font>
   </ItemGroup>
   <ItemGroup>
-    <Image Include="res\gameArea.png">
-      <Filter>res</Filter>
-    </Image>
     <Image Include="res\sprites.png">
       <Filter>res</Filter>
     </Image>
-    <Image Include="res\player.png">
+    <Image Include="res\map.png">
       <Filter>res</Filter>
     </Image>
   </ItemGroup>
