Music as well as basic menu system and win loss as well as some balancing.

--- a/LD49.vcxproj
+++ b/LD49.vcxproj
@@ -195,6 +195,9 @@
     <Image Include="res\map.png" />
     <Image Include="res\sprites.png" />
   </ItemGroup>
+  <ItemGroup>
+    <Media Include="res\LD49Final.wav" />
+  </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
   </ImportGroup>
