Final changes, added some simple damage sounds, as well as tweaked the player and enemy a bit to make it feel a little better and fairer.

--- a/LD49.vcxproj
+++ b/LD49.vcxproj
@@ -196,6 +196,8 @@
     <Image Include="res\sprites.png" />
   </ItemGroup>
   <ItemGroup>
+    <Media Include="res\damage.wav" />
+    <Media Include="res\enemyDamage.wav" />
     <Media Include="res\LD49Final.wav" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
